--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 </head>
 
 <body>
-  <div id="myModal" class="modal fade">
+
+  <div id="myModal" class="modal fade" data-backdrop="static" data-keyboard="false">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
@@ -29,6 +30,7 @@
       </div>
     </div>
   </div>
+
   <div class="overlay" id="mainbody">
     <div class="main-page">
       <div class="row">
